[gd_scene load_steps=4 format=3 uid="uid://c1asrwu11e74m"]

[ext_resource type="Script" uid="uid://bnx8iu6s5scut" path="res://scenes/explore-manager/explore-manager.gd" id="1_vpqee"]
[ext_resource type="PackedScene" uid="uid://6ygqegta6dek" path="res://scenes/file-explorer/file-explorer.tscn" id="2_npbdf"]
[ext_resource type="PackedScene" uid="uid://r8y55mlah1wy" path="res://scenes/file-previewer/file-previewer.tscn" id="3_g1ls4"]

[node name="ExploreManager" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vpqee")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = -4

[node name="TitleLabel" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Explore"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProjectNameHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="textureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2/VBoxContainer/ProjectNameHBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="ProjectNameLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/VBoxContainer/ProjectNameHBoxContainer"]
custom_minimum_size = Vector2(500, 128)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Path to the appropriate godot version you want to build/export with."
text = "<project name>"
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="ProjectPathHBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="ProjectPathLabel" type="Label" parent="VBoxContainer/MarginContainer2/VBoxContainer/ProjectPathHBoxContainer2"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Path:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ProjectPathLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer2/VBoxContainer/ProjectPathHBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
tooltip_text = "Path to the appropriate godot version you want to build/export with."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="OpenProjectPathFolder" type="Button" parent="VBoxContainer/MarginContainer2/VBoxContainer/ProjectPathHBoxContainer2"]
custom_minimum_size = Vector2(125, 31)
layout_mode = 2
tooltip_text = "Opens folder to the specified project path."
text = "Open Folder"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FileExplorer" parent="VBoxContainer/MarginContainer2/VBoxContainer/HSplitContainer" instance=ExtResource("2_npbdf")]
unique_name_in_owner = true
layout_mode = 2

[node name="FilePreviewer" parent="VBoxContainer/MarginContainer2/VBoxContainer/HSplitContainer" instance=ExtResource("3_g1ls4")]
unique_name_in_owner = true
layout_mode = 2
